 22-Feb-2021  V1.663 Further integration adjustments for rcsb.utils.dictionary.
 25-Feb-2021  V1.664 Update dependencies and pipeline config
  7-Mar-2021  V1.666 Handle inconsistent superseding data in repository holdings.
 12-Mar-2021  V1.667 Add separate processing of pdb-format update list inventory.
 18-Mar-2021  V1.668 Add support for embedded iterables within subcategory aggregates, add additional_properties
                     feature categories.
  7-Apr-2021  V1.669 Updates for corrections in DictionaryAPI() method name getFullDescendentList()
 28-Apr-2021  V1.670 Add content type for mmCIF format validation data
  4-May-2021  V1.671 Remove deprecated schema attribute rcsb_nested_indexing_context.context_attributes.search_paths
 19-May-2021  V1.673 Update dependencies in rcsb.utils.dictionary
 27-May-2021  V1.674 Update dependencies to rcsb.utils.dictionary
  2-Jun-2021  V1.675 Update dependencies to rcsb.utils.dictionary and diagnostic output
  3-Jun-2021  V1.676 Setting long description format to markdown - update pipeline config again
  5-Jun-2021  V1.677 Prune test cases
 10-Jun-2021  V1.679 Update dependencies to rcsb.utils.dictionary
 26-Jul-2021  V1.680 Update dependencies to rcsb.utils.dictionary, pipeline configuration, and example configuration
 27-Jul-2021  V1.681 Add support for provider exclusion filters to reduce test resource burden
 28-Jul-2021  V1.682 Adjustments for API extensions in DictMethodResourceProvider() and further culling of redundant unittests
 29-Jul-2021  V1.683 Adjustments for API extensions in RepoLoadWorkflow() and  dependency updates
  1-Aug-2021  V1.684 Add support for embedded iterables in json schema generation and support scanning obsolete entries.
  1-Aug-2021  V1.685 Adjust argument processing in RepoScanExec.py and update dependencies
  3-Aug-2021  V1.686 Update configuration example and dependencies
 25-Aug-2021  V1.687 Update dependencies
 26-Aug-2021  V1.688 Update dependencies